fixed the add button overflowing and cleaned up the styles

--- a/src/pages/request/request.scss
+++ b/src/pages/request/request.scss
@@ -81,72 +81,24 @@ a {
   &__entry {
     display: contents;
   }
-
-  &__parts-recieved {
-    grid-column: span 9;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    border: 2px solid teal;
-    margin: 2rem 4rem;
-    background-color: white;
-    color: black;
-    max-height: 100000px;
-    transition: all 0.4s ease-in-out;
-
-    &__header {
-      display: contents;
-    }
-  }
-
-  // height: 100%;
-  // display: relative;
-
-  // &__body {
-  //   margin-top: 4rem;
-  //   display: flex;
-  //   justify-content: flex-end;
-  // }
-
-  // &__data {
-  //   margin-right: 2.5rem;
-  //   font-size: 1.5rem;
-  //   input {
-  //     font-size: 1.5rem;
-  //     margin: 1rem;
-  //     color: black;
-  //   }
-  //   :first-child {
-  //     padding-right: 1.5rem;
-  //   }
-  // }
-
-  // &__form {
-  // }
-
-  // &--footer {
-  //   display: flex;
-  //   justify-content: space-evenly;
-  // }
-
-  // &--date {
-  //   display: flex;
-  //   font-size: 2rem;
-  //   justify-content: space-around;
-  //   width: 100%;
-  // }
-
-  // &--phi {
-  //   display: flex;
-  //   font-size: 2rem;
-  //   justify-content: space-around;
-  //   width: 100%;
-  //   width: 100%;
-  // }
-
-  // button {
-  //   color: black;
-  // }
 }
+
+.parts-recieved {
+  grid-column: span 9;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin: 0 4rem;
+  background-color: white;
+  color: black;
+  max-height: 100000px;
+  transition: all 0.4s ease-in-out;
+  overflow: hidden;
+
+  &__header {
+    display: contents;
+  }
+}
+
 .grid-border-line {
   grid-column: 1 / -1;
   height: 0;
